# stonks

./: .rustfmt.toml  Cargo.toml  Dockerfile
app/: Cargo.toml  README.md
app/src/: lib.rs  worker.rs
apps/: README.md
apps/klaxo/: Cargo.toml
apps/klaxo/etc/: sample.config.yaml
apps/klaxo/src/: main.rs  worker.rs
apps/mistletoe/: Cargo.toml
apps/mistletoe/etc/: example-config.yaml
apps/mistletoe/src/: histogram.rs  main.rs  predictor.rs
connectivity/tg-api/: Cargo.toml
connectivity/tg-api/src/: lib.rs  update.rs
connectivity/tg-bot-test/: Cargo.toml
connectivity/tg-bot-test/src/: main.rs
connectivity/tg-reporter/: Cargo.toml
connectivity/tg-reporter/src/: implementation.rs  lib.rs
data-sources/: README.md
data-sources/binance/: Cargo.toml
data-sources/binance/src/: candle.rs  error.rs  historical_trades.rs  lib.rs  orderbook.rs  protocol.rs  serde_utils.rs
data-sources/binance/src/fut/: exchange_info.rs  mod.rs  ticker_price.rs
data-sources/binance/src/spot/: candle.rs  exchange_info.rs  historical_trades.rs  mod.rs  orderbook.rs  trade.rs
data-sources/bybit/: Cargo.toml
data-sources/bybit/src/: lib.rs
data-sources/bybit/src/fut/: mod.rs
data-sources/kucoin/: Cargo.toml
data-sources/kucoin/src/: lib.rs
data-sources/kucoin/src/fut/: mod.rs
data-sources/market-feed/: Cargo.toml
data-sources/market-feed/src/: binance_adaptor.rs  candle.rs  candles.rs  lib.rs  order_book.rs  trade.rs
data-sources/multi-price-feed/: Cargo.toml
data-sources/multi-price-feed/src/: lib.rs
data-sources/sources-common/: Cargo.toml
data-sources/sources-common/src/: lib.rs  symbol.rs  time_unit.rs
stock-data-providers/: Cargo.toml
stock-data-providers/src/: lib.rs
stock-data-providers/src/market_feed/: config.rs  implementation.rs  mod.rs
toolset/: Cargo.toml
toolset/src/: lib.rs
