[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["tokio-macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
tracing = "0.1.37"
