[package]
name = "stock-data-providers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { version = "0.1.0", path = "../app" }
futures = "0.3.25"
market-feed = { version = "0.1.0", path = "../data-sources/market-feed" }
reqwest = "0.11.13"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
serde_qs = "0.10.1"
sources-common = { version = "0.1.0", path = "../data-sources/sources-common" }
tokio = { version = "1.23.0", features = ["sync"] }
tracing = "0.1.37"
url = "2.3.1"
