[package]
name = "mistletoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { version = "0.1.0", path = "../../app" }
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
env_logger = "0.10.0"
market-feed = { version = "0.1.0", path = "../../data-sources/market-feed", default-features = false }
serde = { version = "1.0.148", features = ["derive"] }
serde_yaml = "0.9.14"
stock-data-providers = { version = "0.1.0", path = "../../stock-data-providers" }
tg-reporter = { version = "0.1.0", path = "../../connectivity/tg-reporter" }
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
