[package]
name = "tg-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.13"
serde = "1.0.149"
serde_json = "1.0.89"
serde_qs = "0.10.1"
telegram-bot-raw = "0.8.0"
tracing = "0.1.37"
url = "2.3.1"
