[package]
name = "binance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
reqwest = "0.11.13"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
serde_qs = "0.10.1"
sources-common = { version = "0.1.0", path = "../sources-common" }
thiserror = "1.0.37"
tokio = "1.22.0"
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
toolset = { version = "0.1.0", path = "../../toolset" }
tracing = "0.1.37"
url = "2.3.1"
