[package]
name = "bybit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.13"
serde = "1.0.151"
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["macros"] }
toolset = { version = "0.1.0", path = "../../toolset" }
url = "2.3.1"
