[package]
name = "kucoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.13"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["test-util", "rt-multi-thread", "macros"] }
url = "2.3.1"

[dev-dependencies]
tokio = "1.23.0"
