[package]
name = "market-feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = { version = "0.1.0", path = "../binance", optional = true }
futures = "0.3.25"
humantime-serde = "1.1.1"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
serde_json = "1.0.89"
sources-common = { version = "0.1.0", path = "../sources-common" }
tokio = { version = "1.23.0", features = ["sync"] }
tracing = "0.1.37"
url = "2.3.1"


[features]
default = ["binance"]
binance = ["dep:binance"]
