[package]
name = "multi-price-feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = { version = "0.1.0", path = "../binance", optional = true }
kucoin = { version = "0.1.0", path = "../kucoin", optional = true }
bybit = { version = "0.1.0", path = "../bybit", optional = true }
futures = "0.3.25"
url = "2.3.1"
tracing = "0.1.37"
tokio = { version = "1.23.0", features = ["macros"] }
serde_json = "1.0.90"

[features]
default = ["binance", "kucoin", "bybit"]
binance = ["dep:binance"]
kucoin = ["dep:kucoin"]
bybit = ["dep:bybit"]
